<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorBackground"
    android:id="@+id/parentView"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/uiExpression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@id/uiResult"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/uiResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:textSize="48sp"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@id/delete"
        app:layout_constraintStart_toStartOf="parent" />

    <!--  _________________________________________  -->

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorDelete"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorDelete"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/delete" />

    <!--  _________________________________________  -->

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button8"/>

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/button9"/>

    <!--  _________________________________________  -->

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button5" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintStart_toEndOf="@id/button6" />


    <!--  _________________________________________  -->

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/dot"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintStart_toEndOf="@id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/equal"
        app:layout_constraintStart_toEndOf="@id/button2" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/multiply"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@id/divide"
        app:layout_constraintStart_toEndOf="@id/button3" />

    <!--  _________________________________________  -->

    <Button
        android:id="@+id/dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/dot"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/button0"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dot" />

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/equal"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:text="@string/divide"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/equal"/>

</androidx.constraintlayout.widget.ConstraintLayout>